hphp/hack/test/enum_class/typing/typing4.bad.php.exp
File "typing4.bad.php", line 11, characters 20-20:
Unbound name: `T` (Naming[2049])
File "typing4.bad.php", line 11, characters 20-20:
Unbound name: `T` (an object type) (Naming[2049])
File "typing4.bad.php", line 11, characters 12-12:
Enum classes base type must be an interface without generic parameters, not `Box<T>` (Typing[4024])
File "typing4.bad.php", line 12, characters 3-3:
Constant does not match the type of the enum it is in (Typing[4328])
  File "typing4.bad.php", line 11, characters 20-20:
  Expected `T`
  File "typing4.bad.php", line 11, characters 20-20:
  Considering that this type argument is invariant with respect to `Box`
  File "typing4.bad.php", line 12, characters 9-14:
  But got `string`
  File "typing4.bad.php", line 12, characters 9-14:
  Considering that this type argument is invariant with respect to `Box`
